--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.photosvg{
+    fill: rgb(80, 146, 207);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.videosvg{
+    fill: rgb(73, 201, 79);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.eventsvg{
+    fill: rgb(235, 163, 8);
 }
-
-.App-link {
-  color: #61dafb;
+.articlesvg{
+    fill: rgb(228, 111, 43);  
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.videoInput{
+    margin: 0 0 10px 0;
+}
+.spinner{
+    display: flex;
+    justify-content: center;
 }
