--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
-
+*{
+    font-family:  'Roboto',-apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif !important;
+}
 .photosvg{
     fill: rgb(80, 146, 207);
 }
